--- a/index.html
+++ b/index.html
@@ -3,96 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гульмира Жанабекова | Экспертный массаж</title>
+    <title>Гульмира Жанабекова | Экспертный массаж в Астане</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-
-    <style>
-        /* Весь стиль теперь внутри HTML, чтобы ничего не слетало */
-        :root {
-            --gold: #c5a059;
-            --dark: #1c1c1c;
-            --light-bg: #fdfcf9;
-            --white: #ffffff;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Montserrat', sans-serif;
-            background-color: var(--light-bg);
-            color: #333;
-            line-height: 1.6;
-        }
-
-        h1, h2, h3 { font-family: 'Playfair Display', serif; font-weight: 400; color: var(--dark); }
-
-        /* Главный блок */
-        .hero {
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                        url('https://images.unsplash.com/photo-1544161515-436cefb657f8?q=80&w=2070') center/cover;
-            color: var(--white);
-            padding: 20px;
-        }
-
-        .hero h1 { font-size: clamp(2.5rem, 7vw, 4rem); color: var(--white); margin: 0; letter-spacing: 2px; }
-        .subtitle { font-size: 1.2rem; margin: 20px 0; font-weight: 300; }
-
-        .btn {
-            display: inline-block;
-            padding: 18px 40px;
-            background-color: var(--gold);
-            color: var(--white);
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 0.8rem;
-            letter-spacing: 2px;
-            transition: 0.4s;
-            border: 1px solid var(--gold);
-        }
-
-        .btn:hover { background: transparent; backdrop-filter: blur(5px); }
-
-        /* Секции */
-        section { padding: 80px 20px; max-width: 1100px; margin: 0 auto; text-align: center; }
-        
-        h2 { font-size: 2.2rem; margin-bottom: 50px; }
-        h2::after { content: ""; display: block; width: 60px; height: 1px; background: var(--gold); margin: 15px auto; }
-
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
-        .info-block { background: var(--white); padding: 40px; border-top: 3px solid var(--gold); box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
-
-        /* Список услуг */
-        .services-list { 
-            list-style: none; 
-            padding: 0; 
-            display: grid; 
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); 
-            gap: 20px; 
-        }
-        .services-list li { 
-            background: var(--white); 
-            padding: 25px; 
-            border: 1px solid #eee; 
-            transition: 0.3s;
-        }
-        .services-list li:hover { border-color: var(--gold); transform: translateY(-5px); }
-
-        footer { background: var(--dark); color: #888; padding: 60px 20px; text-align: center; }
-        footer p { margin: 5px 0; }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header class="hero">
     <div class="hero-text">
         <h1>Гульмира Жанабекова</h1>
-        <p class="subtitle">Медицинский эксперт с 15-летним стажем</p>
+        [cite_start]<p class="subtitle">Медицинский эксперт • В профессии с 2004 года [cite: 12]</p>
         <a href="https://wa.me/77016092225" class="btn">Записаться в WhatsApp</a>
     </div>
 </header>
@@ -101,30 +22,43 @@
     <h2>Опыт и Квалификация</h2>
     <div class="grid">
         <div class="info-block">
-            <h3>Образование</h3>
-            <p>Дипломированный фельдшер (Медицинский колледж г. Астана).</p>
+            <h3>О себе</h3>
+            [cite_start]<p>Мой путь в медицине начался более 20 лет назад[cite: 12]. [cite_start]Сочетание классического медицинского образования и глубокого изучения современных техник позволяет мне подбирать индивидуальный подход к каждому клиенту, обеспечивая безопасность и результат[cite: 32].</p>
         </div>
         <div class="info-block">
-            <h3>Специфика</h3>
-            <p>6 лет работы в скорой помощи. Умение оказывать доврачебную помощь.</p>
+            <h3>Образование</h3>
+            [cite_start]<p>Дипломированный фельдшер общей практики (Медицинский колледж г. Астана, 2004 г.)[cite: 12]. [cite_start]Регулярно повышаю квалификацию по направлениям: детский, миофасциальный, скульптурный массаж и аппаратные методики[cite: 13, 15, 18].</p>
+        </div>
+        <div class="info-block">
+            <h3>Медицинская база</h3>
+            [cite_start]<p>Более 6 лет опыта работы в службе скорой медицинской помощи (ГССМП)[cite: 22, 23, 24]. [cite_start]Профессиональное владение навыками оказания первой доврачебной помощи[cite: 30].</p>
         </div>
     </div>
 </section>
 
 <section class="services">
-    <h2>Услуги премиум-класса</h2>
+    <h2>Услуги и методики</h2>
     <ul class="services-list">
-        <li>Массаж Пяти Континентов (Новинка 2025)</li>
-        <li>Скульптурный массаж лица</li>
-        <li>Аппаратная коррекция фигуры и Миофасциальный массаж</li>
-        <li>Детский массаж (в том числе для детей с ОВЗ)</li>
+        [cite_start]<li><strong>Массаж Пяти Континентов</strong><br>Эксклюзивная методика (сертификат 2025 г.) [cite: 19]</li>
+        [cite_start]<li><strong>Лечебный и Спортивный</strong><br>Владение всеми видами классического и лимфодренажного массажа [cite: 28]</li>
+        [cite_start]<li><strong>Скульптурный массаж лица</strong><br>Естественный лифтинг и работа с глубокими мышцами [cite: 18, 28]</li>
+        [cite_start]<li><strong>Детский массаж</strong><br>Профессиональная помощь детям, включая работу с ОВЗ [cite: 13, 32]</li>
+        [cite_start]<li><strong>Аппаратная коррекция</strong><br>Прессотерапия, вакуумные методики, магнитные перчатки [cite: 15, 29]</li>
+        [cite_start]<li><strong>Физиотерапия</strong><br>Грязевые, парафиновые и озокеритовые аппликации [cite: 31]</li>
     </ul>
 </section>
 
+<section class="contact">
+    <h2>Контакты</h2>
+    <p>Принимаю по новому адресу:</p>
+    <p><strong>г. Астана, ул. Мухамедханова 4Б, 2 этаж</strong></p>
+    [cite_start]<p>Телефон: <a href="tel:+77016092225">8 701 609 22 25</a> [cite: 6]</p>
+    <br>
+    <a href="https://wa.me/77016092225" class="btn">Написать в WhatsApp</a>
+</section>
+
 <footer>
-    <p>г. Астана, пр. Бауыржана Момышулы 2а</p>
-    <p>Тел: 8 701 609 22 25</p>
-    <p style="margin-top:20px; font-size: 0.7rem;">&copy; 2026 Все права защищены</p>
+    <p>&copy; 2026 Гульмира Жанабекова. Все права защищены.</p>
 </footer>
 
 </body>
