--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="hero">
     <div class="hero-text">
         <h1>Гульмира Жанабекова</h1>
-        [cite_start]<p class="subtitle">Медицинский эксперт • В профессии с 2004 года [cite: 12]</p>
+        <p class="subtitle">Медицинский эксперт • В профессии с 2004 года</p>
         <a href="https://wa.me/77016092225" class="btn">Записаться в WhatsApp</a>
     </div>
 </header>
@@ -23,15 +23,15 @@
     <div class="grid">
         <div class="info-block">
             <h3>О себе</h3>
-            [cite_start]<p>Мой путь в медицине начался более 20 лет назад[cite: 12]. [cite_start]Сочетание классического медицинского образования и глубокого изучения современных техник позволяет мне подбирать индивидуальный подход к каждому клиенту, обеспечивая безопасность и результат[cite: 32].</p>
+            <p>Мой путь в медицине начался более 20 лет назад. Сочетание классического медицинского образования и глубокого изучения современных техник позволяет мне подбирать индивидуальный подход к каждому клиенту, обеспечивая безопасность и результат.</p>
         </div>
         <div class="info-block">
             <h3>Образование</h3>
-            [cite_start]<p>Дипломированный фельдшер общей практики (Медицинский колледж г. Астана, 2004 г.)[cite: 12]. [cite_start]Регулярно повышаю квалификацию по направлениям: детский, миофасциальный, скульптурный массаж и аппаратные методики[cite: 13, 15, 18].</p>
+            <p>Дипломированный фельдшер общей практики (Медицинский колледж г. Астана, 2004 г.). Регулярно повышаю квалификацию по направлениям: детский, миофасциальный, скульптурный массаж и аппаратные методики.</p>
         </div>
         <div class="info-block">
             <h3>Медицинская база</h3>
-            [cite_start]<p>Более 6 лет опыта работы в службе скорой медицинской помощи (ГССМП)[cite: 22, 23, 24]. [cite_start]Профессиональное владение навыками оказания первой доврачебной помощи[cite: 30].</p>
+            <p>Более 6 лет опыта работы в службе скорой медицинской помощи (ГССМП). Профессиональное владение навыками оказания первой доврачебной помощи.</p>
         </div>
     </div>
 </section>
@@ -39,20 +39,20 @@
 <section class="services">
     <h2>Услуги и методики</h2>
     <ul class="services-list">
-        [cite_start]<li><strong>Массаж Пяти Континентов</strong><br>Эксклюзивная методика (сертификат 2025 г.) [cite: 19]</li>
-        [cite_start]<li><strong>Лечебный и Спортивный</strong><br>Владение всеми видами классического и лимфодренажного массажа [cite: 28]</li>
-        [cite_start]<li><strong>Скульптурный массаж лица</strong><br>Естественный лифтинг и работа с глубокими мышцами [cite: 18, 28]</li>
-        [cite_start]<li><strong>Детский массаж</strong><br>Профессиональная помощь детям, включая работу с ОВЗ [cite: 13, 32]</li>
-        [cite_start]<li><strong>Аппаратная коррекция</strong><br>Прессотерапия, вакуумные методики, магнитные перчатки [cite: 15, 29]</li>
-        [cite_start]<li><strong>Физиотерапия</strong><br>Грязевые, парафиновые и озокеритовые аппликации [cite: 31]</li>
+        <li><strong>Массаж Пяти Континентов</strong><br>Эксклюзивная методика (сертификат 2025 г.)</li>
+        <li><strong>Лечебный и Спортивный</strong><br>Владение всеми видами классического и лимфодренажного массажа</li>
+        <li><strong>Скульптурный массаж лица</strong><br>Естественный лифтинг и работа с глубокими мышцами</li>
+        <li><strong>Детский массаж</strong><br>Профессиональная помощь детям, включая работу с ОВЗ</li>
+        <li><strong>Аппаратная коррекция</strong><br>Прессотерапия, вакуумные методики, магнитные перчатки</li>
+        <li><strong>Физиотерапия</strong><br>Грязевые, парафиновые и озокеритовые аппликации</li>
     </ul>
 </section>
 
 <section class="contact">
     <h2>Контакты</h2>
-    <p>Принимаю по новому адресу:</p>
+    <p>Принимаю по адресу:</p>
     <p><strong>г. Астана, ул. Мухамедханова 4Б, 2 этаж</strong></p>
-    [cite_start]<p>Телефон: <a href="tel:+77016092225">8 701 609 22 25</a> [cite: 6]</p>
+    <p>Телефон: <a href="tel:+77016092225">8 701 609 22 25</a></p>
     <br>
     <a href="https://wa.me/77016092225" class="btn">Написать в WhatsApp</a>
 </section>
