Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -4,55 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гульмира Жанабекова | Экспертный массаж</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-
 <nav>
     <a href="index.html" class="logo">G.ZHANABEKOVA</a>
     <ul class="nav-links">
         <li><a href="#about">Опыт</a></li>
         <li><a href="#services">Услуги</a></li>
-        <li><a href="#contact">Контакты</a></li>
-        <li><a href="admin.html" style="color: var(--gold)">Вход</a></li>
+        <li><a href="#booking">Запись</a></li>
+        <li><a href="admin.html" style="color:var(--gold)">Вход</a></li>
     </ul>
-    <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-    </div>
+    <div class="burger"><div class="line1"></div><div class="line2"></div><div class="line3"></div></div>
 </nav>
 
 <header class="hero">
     <div class="hero-text">
         <h1>Гульмира Жанабекова</h1>
-        <p>Медицинский эксперт • В профессии с 2004 года</p>
-        <a href="https://wa.me/77016092225" class="btn">Записаться в WhatsApp</a>
+        <p>Медицинский эксперт • Стаж с 2004 года</p>
+        <a href="#booking" class="btn">Записаться онлайн</a>
     </div>
 </header>
 
-<section id="about">
-    <h2>Опыт и Квалификация</h2>
-    <div class="grid">
-        <div class="info-block">
-            <h3>О себе</h3>
-            <p>Путь в медицине начался более 20 лет назад. Сочетание классического образования и современных техник.</p>
-        </div>
-        <div class="info-block">
-            <h3>Медицинская база</h3>
-            <p>6 лет работы на скорой помощи (ГССМП). Глубокие знания анатомии.</p>
-        </div>
+<section id="booking">
+    <h2>Онлайн-запись</h2>
+    <div class="admin-form" style="margin: 0 auto; max-width: 450px;">
+        <form id="bookingForm">
+            <input type="text" name="name" placeholder="Ваше имя" required>
+            <input type="tel" name="phone" placeholder="Телефон" required>
+            <input type="date" name="date" required>
+            <select name="service" style="width:100%; padding:12px; margin:10px 0;">
+                <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
+                <option value="Лечебный массаж">Лечебный массаж</option>
+            </select>
+            <button type="submit" class="btn" style="width:100%; color:white;">Записаться</button>
+        </form>
+        <p id="bookingMsg" style="display:none; color:green; margin-top:10px;">Заявка отправлена!</p>
     </div>
-</section>
-
-<section id="services">
-    <h2>Услуги</h2>
-    <ul class="services-list">
-        <li><strong>Массаж Пяти Континентов</strong><br>Эксклюзив (2025)</li>
-        <li><strong>Скульптурный массаж лица</strong><br>Лифтинг и омоложение</li>
-        <li><strong>Детский массаж</strong><br>Включая работу с ОВЗ</li>
-    </ul>
 </section>
 
 <script type="module" src="script.js"></script>
