--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         <li><a href="#about">Опыт</a></li>
         <li><a href="#services">Услуги</a></li>
         <li><a href="#booking">Запись</a></li>
+        <li><a href="#contact">Контакты</a></li>
         <li><a href="admin.html" style="color: var(--gold)">Вход</a></li>
     </ul>
-    <div class="burger">
-        <div class="line1"></div><div class="line2"></div><div class="line3"></div>
-    </div>
+    <div class="burger"><div class="line1"></div><div class="line2"></div><div class="line3"></div></div>
 </nav>
 
 <header class="hero">
     <div class="hero-text">
         <h1>Гульмира Жанабекова</h1>
-        <p>Медицинский эксперт • Стаж с 2004 года</p>
+        <p>Медицинский эксперт • В профессии с 2004 года</p>
         <a href="#booking" class="btn">Записаться онлайн</a>
     </div>
 </header>
@@ -34,51 +33,55 @@
     <h2>Опыт и Квалификация</h2>
     <div class="grid">
         <div class="info-block">
-            <h3>Образование</h3>
-            <p>Дипломированный фельдшер (2004 г.). Сертифицированный специалист по детскому, миофасциальному и скульптурному массажу лица.</p>
+            <h3>Профессиональный путь</h3>
+            <p>Путь в медицине начался более 20 лет назад. Сочетаю классическое образование фельдшера и современные международные техники массажа.</p>
         </div>
         <div class="info-block">
             <h3>Медицинская база</h3>
-            <p>6 лет работы на скорой помощи (ГССМП). Глубокие знания анатомии и навыки оказания экстренной доврачебной помощи.</p>
+            <p>6 лет работы на скорой помощи (ГССМП). Глубокие знания анатомии и физиологии человека.</p>
         </div>
     </div>
 </section>
 
 <section id="services">
-    <h2>Услуги и методики</h2>
+    <h2>Программы и методики</h2>
     <ul class="services-list">
-        <li><strong>Массаж Пяти Континентов</strong><br>Эксклюзивный метод (2025)</li>
-        <li><strong>Лечебный и Спортивный</strong><br>Глубокая проработка мышц</li>
-        <li><strong>Скульптурный массаж лица</strong><br>Лифтинг и омоложение</li>
-        <li><strong>Детский массаж</strong><br>Включая работу с детьми ОВЗ</li>
+        <li><strong>Массаж Пяти Континентов</strong><br><small>Уникальная детокс-техника и энергия</small></li>
+        <li><strong>Скульптурный массаж лица</strong><br><small>Безоперационный лифтинг и сияние</small></li>
+        <li><strong>Лечебный массаж</strong><br><small>Работа с триггерами и болями в спине</small></li>
+        <li><strong>Лимфодренажный массаж</strong><br><small>Вывод токсинов и снятие отеков</small></li>
+        <li><strong>Детский массаж (0+)</strong><br><small>Развитие и коррекция, работа с детьми ОВЗ</small></li>
+        <li><strong>Медовый / Баночный</strong><br><small>Коррекция фигуры и детокс</small></li>
     </ul>
 </section>
 
 <section id="booking">
-    <h2>Записаться на прием</h2>
-    <div class="admin-form" style="margin: 0 auto; max-width: 450px;">
+    <h2>Онлайн-запись</h2>
+    <div class="admin-form" style="margin: 0 auto; max-width: 500px;">
         <form id="bookingForm">
-            <input type="text" name="name" placeholder="Ваше имя" required>
-            <input type="tel" name="phone" placeholder="Ваш телефон" required>
+            <input type="text" name="name" placeholder="Как вас зовут?" required>
+            <input type="tel" name="phone" placeholder="Ваш номер телефона" required>
             <input type="date" name="date" required>
-            <select name="service" style="width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd;">
+            <select name="service" style="width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px;">
                 <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
-                <option value="Лечебный массаж">Лечебный массаж</option>
                 <option value="Скульптурный массаж лица">Скульптурный массаж лица</option>
+                <option value="Лечебный массаж">Лечебный массаж</option>
+                <option value="Детский массаж">Детский массаж</option>
+                <option value="Лимфодренажный">Лимфодренажный</option>
             </select>
-            <button type="submit" class="btn" style="width: 100%; color: white;">Отправить заявку</button>
+            <button type="submit" class="btn" style="width: 100%; color: white; border: none;">Забронировать время</button>
         </form>
-        <p id="bookingMsg" style="display:none; color: green; margin-top: 10px; font-weight: bold;">Заявка принята! Мы вам перезвоним.</p>
+        <p id="bookingMsg" style="display:none; color: #c5a059; margin-top: 15px; font-weight: 600;">Заявка принята! Мы скоро свяжемся с вами.</p>
     </div>
 </section>
 
-<section id="contact" class="contact">
-    <h2>Контакты</h2>
-    <p>Жду вас по адресу:</p>
-    <p><strong>г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</strong></p>
-    <p>Телефон: <a href="tel:+77016092225">+7 701 609 22 25</a></p>
+<section id="contact" style="background: #fff; margin-top: 50px;">
+    <h2>Где я принимаю</h2>
+    <p>г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+    <p>Рабочие часы: 09:00 – 20:00 (по записи)</p>
     <div style="margin-top: 20px;">
-        <a href="https://wa.me/77016092225" class="btn" style="background: #25D366; border: none;">Написать в WhatsApp</a>
+        <a href="https://wa.me/77016092225" class="btn" style="background: #25D366; border: none;">WhatsApp</a>
+        <a href="tel:+77016092225" class="btn">Позвонить</a>
     </div>
 </section>
 
