--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <ul class="nav-links">
         <li><a href="#about">Опыт</a></li>
         <li><a href="#services">Услуги</a></li>
+        <li><a href="#reviews">Отзывы</a></li>
         <li><a href="#booking">Запись</a></li>
-        <li><a href="#contact">Контакты</a></li>
         <li><a href="admin.html" style="color: var(--gold)">Вход</a></li>
     </ul>
     <div class="burger"><div class="line1"></div><div class="line2"></div><div class="line3"></div></div>
@@ -24,64 +24,69 @@
 <header class="hero">
     <div class="hero-text">
         <h1>Гульмира Жанабекова</h1>
-        <p>Медицинский эксперт • В профессии с 2004 года</p>
+        <p>Медицинский эксперт • Стаж с 2004 года</p>
         <a href="#booking" class="btn">Записаться онлайн</a>
     </div>
 </header>
 
-<section id="about">
-    <h2>Опыт и Квалификация</h2>
-    <div class="grid">
-        <div class="info-block">
-            <h3>Профессиональный путь</h3>
-            <p>Путь в медицине начался более 20 лет назад. Сочетаю классическое образование фельдшера и современные международные техники массажа.</p>
-        </div>
-        <div class="info-block">
-            <h3>Медицинская база</h3>
-            <p>6 лет работы на скорой помощи (ГССМП). Глубокие знания анатомии и физиологии человека.</p>
-        </div>
-    </div>
-</section>
-
 <section id="services">
     <h2>Программы и методики</h2>
     <ul class="services-list">
-        <li><strong>Массаж Пяти Континентов</strong><br><small>Уникальная детокс-техника и энергия</small></li>
-        <li><strong>Скульптурный массаж лица</strong><br><small>Безоперационный лифтинг и сияние</small></li>
-        <li><strong>Лечебный массаж</strong><br><small>Работа с триггерами и болями в спине</small></li>
-        <li><strong>Лимфодренажный массаж</strong><br><small>Вывод токсинов и снятие отеков</small></li>
-        <li><strong>Детский массаж (0+)</strong><br><small>Развитие и коррекция, работа с детьми ОВЗ</small></li>
-        <li><strong>Медовый / Баночный</strong><br><small>Коррекция фигуры и детокс</small></li>
+        <li><strong>Массаж Пяти Континентов</strong><br><small>Энергетическая детокс-техника</small></li>
+        <li><strong>Скульптурный массаж лица</strong><br><small>Естественный лифтинг и работа с отеками</small></li>
+        <li><strong>Лечебный массаж спины</strong><br><small>Устранение зажимов и болей в пояснице</small></li>
+        <li><strong>Детский массаж (0+)</strong><br><small>Общеразвивающий и лечебный (в т.ч. ОВЗ)</small></li>
+        <li><strong>Лимфодренажный массаж</strong><br><small>Улучшение обмена веществ и легкость</small></li>
+        <li><strong>Антицеллюлитная программа</strong><br><small>Медовый и баночный массаж</small></li>
     </ul>
 </section>
 
-<section id="booking">
-    <h2>Онлайн-запись</h2>
-    <div class="admin-form" style="margin: 0 auto; max-width: 500px;">
-        <form id="bookingForm">
-            <input type="text" name="name" placeholder="Как вас зовут?" required>
-            <input type="tel" name="phone" placeholder="Ваш номер телефона" required>
-            <input type="date" name="date" required>
-            <select name="service" style="width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px;">
-                <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
-                <option value="Скульптурный массаж лица">Скульптурный массаж лица</option>
-                <option value="Лечебный массаж">Лечебный массаж</option>
-                <option value="Детский массаж">Детский массаж</option>
-                <option value="Лимфодренажный">Лимфодренажный</option>
-            </select>
-            <button type="submit" class="btn" style="width: 100%; color: white; border: none;">Забронировать время</button>
-        </form>
-        <p id="bookingMsg" style="display:none; color: #c5a059; margin-top: 15px; font-weight: 600;">Заявка принята! Мы скоро свяжемся с вами.</p>
+<section id="reviews" style="background: rgba(197, 160, 89, 0.05); padding: 80px 20px;">
+    <h2>Отзывы клиентов</h2>
+    <div class="grid">
+        <div class="info-block">
+            <p>«Прошла курс лечебного массажа у Гульмиры. У меня грыжа в пояснице, постоянно мучали боли. После 3 сеанса стало намного легче. Видно, что человек с медицинским образованием, руки очень сильные и профессиональные. Рахмет!»</p>
+            <strong style="color: var(--gold)">— Алия, г. Астана</strong>
+        </div>
+        <div class="info-block">
+            <p>«Массаж 5 континентов — это нечто! Такого расслабления я еще не чувствовала. Гульмира очень тактичная и приятная женщина. В кабинете идеальная чистота, что для меня очень важно. Всем рекомендую.»</p>
+            <strong style="color: var(--gold)">— Сауле</strong>
+        </div>
+        <div class="info-block">
+            <p>«Вожу сына на детский массаж. Гульмира сразу нашла подход к ребенку, он не плачет и идет с удовольствием. Видим реальный прогресс в развитии. Очень грамотный специалист, доверие на 100%.»</p>
+            <strong style="color: var(--gold)">— Бауржан</strong>
+        </div>
     </div>
 </section>
 
-<section id="contact" style="background: #fff; margin-top: 50px;">
-    <h2>Где я принимаю</h2>
-    <p>г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
-    <p>Рабочие часы: 09:00 – 20:00 (по записи)</p>
-    <div style="margin-top: 20px;">
-        <a href="https://wa.me/77016092225" class="btn" style="background: #25D366; border: none;">WhatsApp</a>
-        <a href="tel:+77016092225" class="btn">Позвонить</a>
+<section id="booking">
+    <h2>Забронировать время</h2>
+    <div class="admin-form" style="margin: 0 auto; max-width: 500px;">
+        <form id="bookingForm">
+            <input type="text" name="name" placeholder="Имя" required>
+            <input type="tel" name="phone" placeholder="8 (7xx) xxx xx xx" required>
+            <input type="date" name="date" required>
+            <select name="service" style="width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px;">
+                <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
+                <option value="Скульптурный лица">Скульптурный лица</option>
+                <option value="Лечебный массаж">Лечебный массаж</option>
+                <option value="Детский массаж">Детский массаж</option>
+            </select>
+            <button type="submit" class="btn" style="width: 100%; color: white; border: none;">Отправить заявку</button>
+        </form>
+        <p id="bookingMsg" style="display:none; color: var(--gold); margin-top: 15px; font-weight: 600;">Заявка принята! Мы скоро свяжемся с вами.</p>
+    </div>
+</section>
+
+<section id="contact">
+    <h2>Контакты</h2>
+    <div class="info-block" style="text-align: center; border: none;">
+        <p><strong>Адрес:</strong> г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+        <p><strong>Запись по телефону:</strong> <a href="tel:+77016092225" style="color: var(--text); text-decoration: none; font-weight: 600;">+7 701 609 22 25</a></p>
+        <div style="margin-top: 30px;">
+            <a href="https://wa.me/77016092225" class="btn" style="background: #25D366; border: none; margin-right: 10px;">WhatsApp</a>
+            <a href="https://www.instagram.com/" class="btn" style="background: #E1306C; border: none;">Instagram</a>
+        </div>
     </div>
 </section>
 
