--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гульмира Жанабекова | Экспертный массаж</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <title>Гульмира Жанабекова | Эксперт Массажа</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,79 +15,90 @@
         <li><a href="#about">Опыт</a></li>
         <li><a href="#services">Услуги</a></li>
         <li><a href="#reviews">Отзывы</a></li>
-        <li><a href="#booking">Запись</a></li>
+        <li><a href="#contact">Контакты</a></li>
         <li><a href="admin.html" style="color: var(--gold)">Вход</a></li>
     </ul>
-    <div class="burger"><div class="line1"></div><div class="line2"></div><div class="line3"></div></div>
+    <div class="burger">
+        <div class="line1"></div><div class="line2"></div><div class="line3"></div>
+    </div>
 </nav>
 
 <header class="hero">
     <div class="hero-text">
-        <h1>Гульмира Жанабекова</h1>
-        <p>Медицинский эксперт • Стаж с 2004 года</p>
-        <a href="#booking" class="btn">Записаться онлайн</a>
+        <h1>Эстетика и Здоровье</h1>
+        <p>ИСКУССТВО МЕДИЦИНСКОГО МАССАЖА С 2004 ГОДА</p>
+        <br><br>
+        <a href="#booking" class="btn">Забронировать визит</a>
     </div>
 </header>
 
+<section id="about">
+    <h2>Опыт Мастера</h2>
+    <div class="grid">
+        <div class="info-block">
+            <h3>20 лет в медицине</h3>
+            <p>Дипломированный фельдшер с колоссальным опытом. 6 лет работы в экстренной медицине (ГССМП) сформировали глубокое понимание каждой мышцы и связки вашего тела.</p>
+        </div>
+        <div class="info-block">
+            <h3>Профессионализм</h3>
+            <p>Владею техниками от классического лечебного до эксклюзивного Массажа Пяти Континентов. Постоянно повышаю квалификацию, чтобы давать лучший результат.</p>
+        </div>
+    </div>
+</section>
+
 <section id="services">
-    <h2>Программы и методики</h2>
-    <ul class="services-list">
-        <li><strong>Массаж Пяти Континентов</strong><br><small>Энергетическая детокс-техника</small></li>
-        <li><strong>Скульптурный массаж лица</strong><br><small>Естественный лифтинг и работа с отеками</small></li>
-        <li><strong>Лечебный массаж спины</strong><br><small>Устранение зажимов и болей в пояснице</small></li>
-        <li><strong>Детский массаж (0+)</strong><br><small>Общеразвивающий и лечебный (в т.ч. ОВЗ)</small></li>
-        <li><strong>Лимфодренажный массаж</strong><br><small>Улучшение обмена веществ и легкость</small></li>
-        <li><strong>Антицеллюлитная программа</strong><br><small>Медовый и баночный массаж</small></li>
+    <h2>Авторские Программы</h2>
+    <div class="services-list">
+        <li><strong>Массаж 5 Континентов</strong><small>Микс лучших техник мира: детокс и энергия</small></li>
+        <li><strong>Скульптурное моделирование</strong><small>Лифтинг лица без инъекций</small></li>
+        <li><strong>Терапевтический массаж</strong><small>Лечение болей в спине и шее</small></li>
+        <li><strong>Детская реабилитация</strong><small>Массаж 0+, работа с гипертонусом и ОВЗ</small></li>
     </ul>
 </section>
 
-<section id="reviews" style="background: rgba(197, 160, 89, 0.05); padding: 80px 20px;">
-    <h2>Отзывы клиентов</h2>
+<section id="reviews" style="background: #fff;">
+    <h2>Голоса Клиентов</h2>
     <div class="grid">
-        <div class="info-block">
-            <p>«Прошла курс лечебного массажа у Гульмиры. У меня грыжа в пояснице, постоянно мучали боли. После 3 сеанса стало намного легче. Видно, что человек с медицинским образованием, руки очень сильные и профессиональные. Рахмет!»</p>
-            <strong style="color: var(--gold)">— Алия, г. Астана</strong>
+        <div class="info-block" style="border: none; background: #fdfaf5;">
+            <p>«У Гульмиры золотые руки. После курса лечебного массажа забыла о болях в пояснице. Очень профессионально!»</p>
+            <strong style="color: var(--gold)">— Алия</strong>
         </div>
-        <div class="info-block">
-            <p>«Массаж 5 континентов — это нечто! Такого расслабления я еще не чувствовала. Гульмира очень тактичная и приятная женщина. В кабинете идеальная чистота, что для меня очень важно. Всем рекомендую.»</p>
+        <div class="info-block" style="border: none; background: #fdfaf5;">
+            <p>«Массаж 5 континентов — это полное перерождение. Невероятная атмосфера и эффект. Рахмет за ваш труд!»</p>
             <strong style="color: var(--gold)">— Сауле</strong>
-        </div>
-        <div class="info-block">
-            <p>«Вожу сына на детский массаж. Гульмира сразу нашла подход к ребенку, он не плачет и идет с удовольствием. Видим реальный прогресс в развитии. Очень грамотный специалист, доверие на 100%.»</p>
-            <strong style="color: var(--gold)">— Бауржан</strong>
         </div>
     </div>
 </section>
 
 <section id="booking">
-    <h2>Забронировать время</h2>
-    <div class="admin-form" style="margin: 0 auto; max-width: 500px;">
+    <h2>Запись на сеанс</h2>
+    <div class="admin-form">
         <form id="bookingForm">
-            <input type="text" name="name" placeholder="Имя" required>
-            <input type="tel" name="phone" placeholder="8 (7xx) xxx xx xx" required>
+            <input type="text" name="name" placeholder="Ваше полное имя" required>
+            <input type="tel" name="phone" placeholder="Контактный телефон" required>
             <input type="date" name="date" required>
-            <select name="service" style="width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px;">
+            <select name="service">
                 <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
                 <option value="Скульптурный лица">Скульптурный лица</option>
                 <option value="Лечебный массаж">Лечебный массаж</option>
-                <option value="Детский массаж">Детский массаж</option>
             </select>
-            <button type="submit" class="btn" style="width: 100%; color: white; border: none;">Отправить заявку</button>
+            <button type="submit" class="btn" style="width: 100%;">Отправить запрос</button>
         </form>
-        <p id="bookingMsg" style="display:none; color: var(--gold); margin-top: 15px; font-weight: 600;">Заявка принята! Мы скоро свяжемся с вами.</p>
+        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); font-weight: bold; margin-top: 20px;">Заявка принята! Ожидайте звонка.</p>
     </div>
 </section>
 
-<section id="contact">
+<section id="contact" style="text-align: center;">
     <h2>Контакты</h2>
-    <div class="info-block" style="text-align: center; border: none;">
-        <p><strong>Адрес:</strong> г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
-        <p><strong>Запись по телефону:</strong> <a href="tel:+77016092225" style="color: var(--text); text-decoration: none; font-weight: 600;">+7 701 609 22 25</a></p>
-        <div style="margin-top: 30px;">
-            <a href="https://wa.me/77016092225" class="btn" style="background: #25D366; border: none; margin-right: 10px;">WhatsApp</a>
-            <a href="https://www.instagram.com/" class="btn" style="background: #E1306C; border: none;">Instagram</a>
-        </div>
-    </div>
+    <p style="font-size: 1.2rem;">г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+    <p>Ежедневно: 09:00 — 21:00</p>
+    <br>
+    <a href="tel:+77016092225" class="btn" style="background: var(--dark);">+7 701 609 22 25</a>
+    <br><br>
+    <p>Следите за мной в соцсетях:</p>
+    <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: var(--gold); text-decoration: none; font-weight: 700; font-size: 1.1rem;">INSTAGRAM</a>
+    <span style="margin: 0 15px;">|</span>
+    <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; text-decoration: none; font-weight: 700; font-size: 1.1rem;">WHATSAPP</a>
 </section>
 
 <script type="module" src="script.js"></script>
