--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гульмира Жанабекова | Эксперт Массажа</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 <nav>
     <a href="index.html" class="logo">G.ZHANABEKOVA</a>
     <ul class="nav-links">
-        <li><a href="#about">Опыт</a></li>
+        <li><a href="#about">Опыт мастера</a></li>
         <li><a href="#services">Услуги</a></li>
         <li><a href="#reviews">Отзывы</a></li>
         <li><a href="#contact">Контакты</a></li>
@@ -23,82 +23,99 @@
     </div>
 </nav>
 
-<header class="hero">
-    <div class="hero-text">
-        <h1>Эстетика и Здоровье</h1>
-        <p>ИСКУССТВО МЕДИЦИНСКОГО МАССАЖА С 2004 ГОДА</p>
-        <br><br>
-        <a href="#booking" class="btn">Забронировать визит</a>
+<header class="hero" style="height: 80vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1544161515-436cefb657f8?q=80&w=2070') center/cover; display: flex; align-items: center; justify-content: center; color: white;">
+    <div style="text-align: center;">
+        <h1 style="color: white; font-size: 3.5rem;">Гульмира Жанабекова</h1>
+        <p style="font-size: 1.5rem; letter-spacing: 2px;">МЕДИЦИНСКИЙ МАССАЖ С 2004 ГОДА</p>
     </div>
 </header>
 
 <section id="about">
-    <h2>Опыт Мастера</h2>
+    <h2>Опыт мастера</h2>
     <div class="grid">
         <div class="info-block">
-            <h3>20 лет в медицине</h3>
-            <p>Дипломированный фельдшер с колоссальным опытом. 6 лет работы в экстренной медицине (ГССМП) сформировали глубокое понимание каждой мышцы и связки вашего тела.</p>
+            <h3>20 лет практики</h3>
+            <p>Дипломированный фельдшер. 6 лет беспрерывной работы на скорой помощи (ГССМП). Это база, которая позволяет видеть проблему пациента глубже, чем просто зажим в мышцах.</p>
         </div>
         <div class="info-block">
-            <h3>Профессионализм</h3>
-            <p>Владею техниками от классического лечебного до эксклюзивного Массажа Пяти Континентов. Постоянно повышаю квалификацию, чтобы давать лучший результат.</p>
+            <h3>Квалификация</h3>
+            <p>Постоянное обучение новым техникам. Сочетание классического медицинского подхода и современных восточных методик оздоровления организма.</p>
         </div>
     </div>
 </section>
 
 <section id="services">
-    <h2>Авторские Программы</h2>
-    <div class="services-list">
-        <li><strong>Массаж 5 Континентов</strong><small>Микс лучших техник мира: детокс и энергия</small></li>
-        <li><strong>Скульптурное моделирование</strong><small>Лифтинг лица без инъекций</small></li>
-        <li><strong>Терапевтический массаж</strong><small>Лечение болей в спине и шее</small></li>
-        <li><strong>Детская реабилитация</strong><small>Массаж 0+, работа с гипертонусом и ОВЗ</small></li>
-    </ul>
+    <h2>Перечень услуг</h2>
+    <div class="grid">
+        <div class="info-block">
+            <strong>Массаж 5 Континентов</strong>
+            <p>Уникальная методика, объединяющая лучшие техники мира для глубокого детокса и восстановления энергии.</p>
+        </div>
+        <div class="info-block">
+            <strong>Скульптурный массаж лица</strong>
+            <p>Ручная пластика лица. Работа с мышцами для достижения лифтинг-эффекта без инъекций.</p>
+        </div>
+        <div class="info-block">
+            <strong>Лечебный массаж</strong>
+            <p>Профессиональная проработка триггерных точек, устранение болей в спине, шее и пояснице.</p>
+        </div>
+        <div class="info-block">
+            <strong>Детский массаж (0+)</strong>
+            <p>Профилактика и лечение. Опыт работы с детьми разной сложности, включая реабилитацию и ОВЗ.</p>
+        </div>
+    </div>
 </section>
 
 <section id="reviews" style="background: #fff;">
-    <h2>Голоса Клиентов</h2>
+    <h2>Отзывы клиентов</h2>
     <div class="grid">
-        <div class="info-block" style="border: none; background: #fdfaf5;">
-            <p>«У Гульмиры золотые руки. После курса лечебного массажа забыла о болях в пояснице. Очень профессионально!»</p>
+        <div class="info-block">
+            <p>«Видно, что человек с медицинским образованием, руки очень сильные и профессиональные. Рахмет!»</p>
             <strong style="color: var(--gold)">— Алия</strong>
         </div>
-        <div class="info-block" style="border: none; background: #fdfaf5;">
-            <p>«Массаж 5 континентов — это полное перерождение. Невероятная атмосфера и эффект. Рахмет за ваш труд!»</p>
+        <div class="info-block">
+            <p>«Массаж 5 континентов — это нечто! Такого расслабления я еще не чувствовала. Всем рекомендую.»</p>
             <strong style="color: var(--gold)">— Сауле</strong>
+        </div>
+        <div class="info-block">
+            <p>«Вожу сына на массаж. Гульмира сразу нашла подход к ребенку, он идет с удовольствием. Очень грамотный специалист.»</p>
+            <strong style="color: var(--gold)">— Бауржан</strong>
         </div>
     </div>
 </section>
 
 <section id="booking">
-    <h2>Запись на сеанс</h2>
+    <h2>Записаться на сеанс</h2>
     <div class="admin-form">
         <form id="bookingForm">
-            <input type="text" name="name" placeholder="Ваше полное имя" required>
-            <input type="tel" name="phone" placeholder="Контактный телефон" required>
+            <input type="text" name="name" placeholder="Ваше имя" required>
+            <input type="tel" name="phone" placeholder="Ваш телефон" required>
             <input type="date" name="date" required>
             <select name="service">
                 <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
                 <option value="Скульптурный лица">Скульптурный лица</option>
                 <option value="Лечебный массаж">Лечебный массаж</option>
+                <option value="Детский массаж">Детский массаж</option>
             </select>
-            <button type="submit" class="btn" style="width: 100%;">Отправить запрос</button>
+            <button type="submit" class="btn" style="width: 100%;">Отправить данные</button>
         </form>
-        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); font-weight: bold; margin-top: 20px;">Заявка принята! Ожидайте звонка.</p>
+        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 20px;">Заявка отправлена. Мы свяжемся с вами!</p>
     </div>
 </section>
 
-<section id="contact" style="text-align: center;">
-    <h2>Контакты</h2>
-    <p style="font-size: 1.2rem;">г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
-    <p>Ежедневно: 09:00 — 21:00</p>
-    <br>
-    <a href="tel:+77016092225" class="btn" style="background: var(--dark);">+7 701 609 22 25</a>
-    <br><br>
-    <p>Следите за мной в соцсетях:</p>
-    <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: var(--gold); text-decoration: none; font-weight: 700; font-size: 1.1rem;">INSTAGRAM</a>
-    <span style="margin: 0 15px;">|</span>
-    <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; text-decoration: none; font-weight: 700; font-size: 1.1rem;">WHATSAPP</a>
+<section id="contact">
+    <h2>Контактная информация</h2>
+    <div style="text-align: center;">
+        <p><strong>Адрес:</strong> г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+        <p><strong>График:</strong> По предварительной записи (09:00 — 21:00)</p>
+        <br>
+        <a href="tel:+77016092225" class="btn">+7 701 609 22 25</a>
+        <br><br>
+        <p>Наши социальные сети:</p>
+        <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: #E1306C; font-weight: bold; text-decoration: none; font-size: 1.2rem;">INSTAGRAM</a>
+        <span style="margin: 0 15px;">|</span>
+        <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; font-weight: bold; text-decoration: none; font-size: 1.2rem;">WHATSAPP</a>
+    </div>
 </section>
 
 <script type="module" src="script.js"></script>
