--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гульмира Жанабекова | Эксперт Массажа</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,17 +16,19 @@
         <li><a href="#services">Услуги</a></li>
         <li><a href="#reviews">Отзывы</a></li>
         <li><a href="#contact">Контакты</a></li>
-        <li><a href="admin.html" style="color: var(--gold)">Вход</a></li>
+        <li><a href="#booking" class="nav-booking-btn">Запись</a></li>
     </ul>
     <div class="burger">
         <div class="line1"></div><div class="line2"></div><div class="line3"></div>
     </div>
 </nav>
 
-<header class="hero" style="height: 80vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1544161515-436cefb657f8?q=80&w=2070') center/cover; display: flex; align-items: center; justify-content: center; color: white;">
+<header class="hero" style="height: 90vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1519823551278-64ac92734fb1?q=80&w=2070') center/cover; display: flex; align-items: center; justify-content: center; color: white;">
     <div style="text-align: center;">
-        <h1 style="color: white; font-size: 3.5rem;">Гульмира Жанабекова</h1>
-        <p style="font-size: 1.5rem; letter-spacing: 2px;">МЕДИЦИНСКИЙ МАССАЖ С 2004 ГОДА</p>
+        <h1 style="color: white; font-size: 4rem; margin-bottom: 20px;">Гульмира Жанабекова</h1>
+        <p style="font-size: 1.6rem; letter-spacing: 4px; font-weight: 300;">ПРОФЕССИОНАЛЬНЫЙ МЕДИЦИНСКИЙ МАССАЖ</p>
+        <br><br>
+        <a href="#booking" class="btn">Записаться онлайн</a>
     </div>
 </header>
 
@@ -35,50 +37,50 @@
     <div class="grid">
         <div class="info-block">
             <h3>20 лет практики</h3>
-            <p>Дипломированный фельдшер. 6 лет беспрерывной работы на скорой помощи (ГССМП). Это база, которая позволяет видеть проблему пациента глубже, чем просто зажим в мышцах.</p>
+            <p>Дипломированный фельдшер. Более 6 лет опыта в экстренной медицине (скорая помощь ГССМП). Этот опыт позволяет проводить массаж с глубоким пониманием анатомии и физиологии каждого пациента.</p>
         </div>
         <div class="info-block">
             <h3>Квалификация</h3>
-            <p>Постоянное обучение новым техникам. Сочетание классического медицинского подхода и современных восточных методик оздоровления организма.</p>
+            <p>Сочетание классической медицинской школы и передовых мировых техник. Я помогаю не просто расслабиться, а решить конкретные проблемы со здоровьем и самочувствием.</p>
         </div>
     </div>
 </section>
 
 <section id="services">
-    <h2>Перечень услуг</h2>
+    <h2>Услуги</h2>
     <div class="grid">
         <div class="info-block">
             <strong>Массаж 5 Континентов</strong>
-            <p>Уникальная методика, объединяющая лучшие техники мира для глубокого детокса и восстановления энергии.</p>
+            <p>Элитная процедура, объединяющая лучшие массажные традиции мира для полной перезагрузки организма.</p>
         </div>
         <div class="info-block">
             <strong>Скульптурный массаж лица</strong>
-            <p>Ручная пластика лица. Работа с мышцами для достижения лифтинг-эффекта без инъекций.</p>
+            <p>Глубокая проработка мышц лица для мощного лифтинг-эффекта и сияния кожи без инъекций.</p>
         </div>
         <div class="info-block">
             <strong>Лечебный массаж</strong>
-            <p>Профессиональная проработка триггерных точек, устранение болей в спине, шее и пояснице.</p>
+            <p>Терапевтическое воздействие на триггеры, спину и суставы. Избавление от хронических болей.</p>
         </div>
         <div class="info-block">
             <strong>Детский массаж (0+)</strong>
-            <p>Профилактика и лечение. Опыт работы с детьми разной сложности, включая реабилитацию и ОВЗ.</p>
+            <p>Профилактика и лечение детей, включая работу с особенностями развития и реабилитацию.</p>
         </div>
     </div>
 </section>
 
-<section id="reviews" style="background: #fff;">
+<section id="reviews">
     <h2>Отзывы клиентов</h2>
     <div class="grid">
         <div class="info-block">
-            <p>«Видно, что человек с медицинским образованием, руки очень сильные и профессиональные. Рахмет!»</p>
-            <strong style="color: var(--gold)">— Алия</strong>
+            <p>«Золотые руки! После курса лечебного массажа спина как новая. Видно, что Гульмира — медик до мозга костей. Доверяю на все 100%.»</p>
+            <strong style="color: var(--gold)">— Алия, г. Астана</strong>
         </div>
         <div class="info-block">
-            <p>«Массаж 5 континентов — это нечто! Такого расслабления я еще не чувствовала. Всем рекомендую.»</p>
+            <p>«Массаж 5 континентов — это лучшее, что случалось со мной за последнее время. Уровень сервиса и мастерства на высоте.»</p>
             <strong style="color: var(--gold)">— Сауле</strong>
         </div>
         <div class="info-block">
-            <p>«Вожу сына на массаж. Гульмира сразу нашла подход к ребенку, он идет с удовольствием. Очень грамотный специалист.»</p>
+            <p>«Привожу сына к Гульмире. Она очень чуткая, сразу нашла общий язык. Результаты по здоровью видим после каждого курса.»</p>
             <strong style="color: var(--gold)">— Бауржан</strong>
         </div>
     </div>
@@ -99,22 +101,23 @@
             </select>
             <button type="submit" class="btn" style="width: 100%;">Отправить данные</button>
         </form>
-        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 20px;">Заявка отправлена. Мы свяжемся с вами!</p>
+        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px; font-weight: bold;">Ваша заявка успешно отправлена!</p>
     </div>
 </section>
 
 <section id="contact">
-    <h2>Контактная информация</h2>
+    <h2>Контакты</h2>
     <div style="text-align: center;">
-        <p><strong>Адрес:</strong> г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
-        <p><strong>График:</strong> По предварительной записи (09:00 — 21:00)</p>
+        <p style="font-size: 1.3rem;">г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+        <p>Прием ведется по предварительной записи: 09:00 — 21:00</p>
         <br>
         <a href="tel:+77016092225" class="btn">+7 701 609 22 25</a>
         <br><br>
-        <p>Наши социальные сети:</p>
-        <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: #E1306C; font-weight: bold; text-decoration: none; font-size: 1.2rem;">INSTAGRAM</a>
-        <span style="margin: 0 15px;">|</span>
-        <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; font-weight: bold; text-decoration: none; font-size: 1.2rem;">WHATSAPP</a>
+        <p>Свяжитесь со мной в социальных сетях:</p>
+        <div style="display: flex; justify-content: center; gap: 30px; margin-top: 20px;">
+            <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: #E1306C; font-weight: 700; text-decoration: none; font-size: 1.2rem; border-bottom: 2px solid #E1306C;">INSTAGRAM</a>
+            <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; font-weight: 700; text-decoration: none; font-size: 1.2rem; border-bottom: 2px solid #25D366;">WHATSAPP</a>
+        </div>
     </div>
 </section>
 
