--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
         <li><a href="#booking" class="nav-booking-btn">Запись</a></li>
     </ul>
     <div class="burger">
-        <div class="line1"></div><div class="line2"></div><div class="line3"></div>
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
     </div>
 </nav>
+
+<footer style="padding: 20px; text-align: center; font-size: 0.8rem; opacity: 0.3;">
+    <a href="admin.html" style="color: inherit; text-decoration: none;">Личный кабинет</a>
+</footer>
 
 <header class="hero" style="height: 90vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1519823551278-64ac92734fb1?q=80&w=2070') center/cover; display: flex; align-items: center; justify-content: center; color: white;">
     <div style="text-align: center;">
@@ -124,3 +130,4 @@
 <script type="module" src="script.js"></script>
 </body>
 </html>
+
