--- a/index.html
+++ b/index.html
@@ -19,22 +19,14 @@
         <li><a href="#booking" class="nav-booking-btn">Запись</a></li>
     </ul>
     <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
+        <div class="line1"></div><div class="line2"></div><div class="line3"></div>
     </div>
 </nav>
-
-<footer style="padding: 20px; text-align: center; font-size: 0.8rem; opacity: 0.3;">
-    <a href="admin.html" style="color: inherit; text-decoration: none;">Личный кабинет</a>
-</footer>
 
 <header class="hero" style="height: 90vh; background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1519823551278-64ac92734fb1?q=80&w=2070') center/cover; display: flex; align-items: center; justify-content: center; color: white;">
     <div style="text-align: center;">
         <h1 style="color: white; font-size: 4rem; margin-bottom: 20px;">Гульмира Жанабекова</h1>
         <p style="font-size: 1.6rem; letter-spacing: 4px; font-weight: 300;">ПРОФЕССИОНАЛЬНЫЙ МЕДИЦИНСКИЙ МАССАЖ</p>
-        <br><br>
-        <a href="#booking" class="btn">Записаться онлайн</a>
     </div>
 </header>
 
@@ -55,40 +47,19 @@
 <section id="services">
     <h2>Услуги</h2>
     <div class="grid">
-        <div class="info-block">
-            <strong>Массаж 5 Континентов</strong>
-            <p>Элитная процедура, объединяющая лучшие массажные традиции мира для полной перезагрузки организма.</p>
-        </div>
-        <div class="info-block">
-            <strong>Скульптурный массаж лица</strong>
-            <p>Глубокая проработка мышц лица для мощного лифтинг-эффекта и сияния кожи без инъекций.</p>
-        </div>
-        <div class="info-block">
-            <strong>Лечебный массаж</strong>
-            <p>Терапевтическое воздействие на триггеры, спину и суставы. Избавление от хронических болей.</p>
-        </div>
-        <div class="info-block">
-            <strong>Детский массаж (0+)</strong>
-            <p>Профилактика и лечение детей, включая работу с особенностями развития и реабилитацию.</p>
-        </div>
+        <div class="info-block"><strong>Массаж 5 Континентов</strong><p>Элитная процедура для полной перезагрузки организма.</p></div>
+        <div class="info-block"><strong>Скульптурный массаж лица</strong><p>Ручная пластика и лифтинг-эффект без инъекций.</p></div>
+        <div class="info-block"><strong>Лечебный массаж</strong><p>Устранение болей в спине, шее и пояснице.</p></div>
+        <div class="info-block"><strong>Детский массаж (0+)</strong><p>Профилактика и реабилитация детей любого возраста.</p></div>
     </div>
 </section>
 
 <section id="reviews">
     <h2>Отзывы клиентов</h2>
     <div class="grid">
-        <div class="info-block">
-            <p>«Золотые руки! После курса лечебного массажа спина как новая. Видно, что Гульмира — медик до мозга костей. Доверяю на все 100%.»</p>
-            <strong style="color: var(--gold)">— Алия, г. Астана</strong>
-        </div>
-        <div class="info-block">
-            <p>«Массаж 5 континентов — это лучшее, что случалось со мной за последнее время. Уровень сервиса и мастерства на высоте.»</p>
-            <strong style="color: var(--gold)">— Сауле</strong>
-        </div>
-        <div class="info-block">
-            <p>«Привожу сына к Гульмире. Она очень чуткая, сразу нашла общий язык. Результаты по здоровью видим после каждого курса.»</p>
-            <strong style="color: var(--gold)">— Бауржан</strong>
-        </div>
+        <div class="info-block"><p>«Золотые руки! Спина как новая. Доверяю на все 100%.»<br><strong>— Алия</strong></p></div>
+        <div class="info-block"><p>«Массаж 5 континентов — это лучшее, что случалось со мной. Рахмет!»<br><strong>— Сауле</strong></p></div>
+        <div class="info-block"><p>«Вожу сына к Гульмире. Она очень чуткая, результаты видим сразу.»<br><strong>— Бауржан</strong></p></div>
     </div>
 </section>
 
@@ -103,31 +74,30 @@
                 <option value="Массаж 5 Континентов">Массаж 5 Континентов</option>
                 <option value="Скульптурный лица">Скульптурный лица</option>
                 <option value="Лечебный массаж">Лечебный массаж</option>
-                <option value="Детский массаж">Детский массаж</option>
             </select>
             <button type="submit" class="btn" style="width: 100%;">Отправить данные</button>
         </form>
-        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px; font-weight: bold;">Ваша заявка успешно отправлена!</p>
+        <p id="bookingMsg" style="display:none; text-align: center; color: var(--gold); margin-top: 25px;">Заявка отправлена!</p>
     </div>
 </section>
 
 <section id="contact">
     <h2>Контакты</h2>
     <div style="text-align: center;">
-        <p style="font-size: 1.3rem;">г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
-        <p>Прием ведется по предварительной записи: 09:00 — 21:00</p>
+        <p>г. Астана, ул. Мухамедханова 8, ЖК "SARDAR"</p>
+        <p>Тел: <a href="tel:+77016092225">+7 701 609 22 25</a></p>
         <br>
-        <a href="tel:+77016092225" class="btn">+7 701 609 22 25</a>
-        <br><br>
-        <p>Свяжитесь со мной в социальных сетях:</p>
-        <div style="display: flex; justify-content: center; gap: 30px; margin-top: 20px;">
-            <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: #E1306C; font-weight: 700; text-decoration: none; font-size: 1.2rem; border-bottom: 2px solid #E1306C;">INSTAGRAM</a>
-            <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; font-weight: 700; text-decoration: none; font-size: 1.2rem; border-bottom: 2px solid #25D366;">WHATSAPP</a>
+        <div style="display: flex; justify-content: center; gap: 20px;">
+            <a href="https://www.instagram.com/gulmira_aktailakovna84?igsh=a2tsN3Q4dWJwdzFy" target="_blank" style="color: #E1306C; font-weight: 700;">INSTAGRAM</a>
+            <a href="https://wa.me/77016092225" target="_blank" style="color: #25D366; font-weight: 700;">WHATSAPP</a>
         </div>
     </div>
 </section>
 
+<footer style="background: #1a1a1a; padding: 40px 20px; text-align: center;">
+    <a href="admin.html" style="color: #555; text-decoration: none; font-size: 0.9rem; border: 1px solid #333; padding: 8px 15px; border-radius: 5px;">Вход для персонала</a>
+</footer>
+
 <script type="module" src="script.js"></script>
 </body>
 </html>
-
