--- a/admin.html
+++ b/admin.html
@@ -2,16 +2,18 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Вход</title>
+    <title>Вход в систему</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="admin-form" style="margin-top:150px;">
-        <h2>Авторизация</h2>
+<body style="display:flex; align-items:center; justify-content:center; height:100vh;">
+    <div class="admin-form">
+        <h2 style="margin-bottom:30px;">Авторизация</h2>
         <input type="text" id="user" placeholder="Логин">
         <input type="password" id="pass" placeholder="Пароль">
-        <button class="btn" onclick="login()" style="width:100%; color:white;">Войти</button>
-        <p id="msg" style="color:red; display:none; margin-top:10px;">Ошибка</p>
+        <button class="btn" onclick="login()" style="width:100%;">Войти</button>
+        <p id="msg" style="color:red; display:none; margin-top:20px; text-align:center;">Неверный логин или пароль</p>
+        <br>
+        <center><a href="index.html" style="color:var(--gold); font-size:0.9rem;">Вернуться на сайт</a></center>
     </div>
     <script type="module" src="script.js"></script>
 </body>
